# mc6845-cga-rp2040

./: .clang-format  CGA.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_ROADMAP.md  README.md  clock_pio.h  design-doc.md  main.c  rom.h
pld/: attribute.chp  attribute.fus  attribute.jed  attribute.pin  attribute.pld  build.bat  character.chp  character.fus  character.jed  character.pin  character.pld  clock-divider.chp  clock-divider.fus  clock-divider.jed  clock-divider.pin  clock-divider.pld  decody.py  graphics.chp  graphics.fus  graphics.jed  graphics.pin  graphics.pld  isa-io.chp  isa-io.fus  isa-io.jed  isa-io.pin  isa-io.pld  isa-vram.chp  isa-vram.fus  isa-vram.jed  isa-vram.pin  isa-vram.pld  scheme.net
